--- a/back_end/teme/README
+++ b/back_end/teme/README
@@ -1,4 +1,4 @@
-# Project Name
+# Temelio
 
 
 Large foundations tend to distribute money to several hundreds of nonprofits within a year. For legal reasons, the foundation needs to formally email each nonprofit a message that contains the nonprofit's name, the address, and the current date.
